[package]
name = "{{project-name}}"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
utils.workspace = true
dhat.workspace = true
tracing-subscriber.workspace = true

[profile.release]
debug = 1

[features]
dhat-heap = []
dhat-ad-hoc = []
