[package]
name = "day-10"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
utils.workspace = true
dhat.workspace = true
tracing-subscriber.workspace = true
colored.workspace = true
checked_clamp.workspace = true

[features]
dhat-heap = []
dhat-ad-hoc = []
